# linux-syscall-visualizer

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: main.py  syscalls.py  utils.py
tests/: test_syscalls.py
