[tool.poetry]
name = "linux-syscall-visualizer"
version = "1.0.0"
description = "A simple visualizer for Linux system calls"

[tool.poetry.dependencies]
python = "^3.9"
cmake = "^3.10"
pybind11 = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"

[tool.pytype]
check = ["src"]
[tool.cmake]
version = ">= 3.10"

[tool.pybind11]
version = ">= 2.6"

[tool.cmake]
version = ">= 3.10"

[tool.setup]
name = "linux-syscall-visualizer"
version = "1.0.0"
description = "A simple visualizer for Linux system calls"
long_description = """
A simple visualizer for Linux system calls.
"""
author = "Samy Alderson"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

[tool.cmake]
version = ">= 3.10"

[tool.setup]
requires = ["setuptools", "wheel"]

[tool.isort]
profile = "black"

[tool.pytype]
check = ["src"]